--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   ],
   "require": {
     "php": ">=5.5.0",
-    "league/factory-muffin": "3.0.*@dev"
+    "league/factory-muffin": "3.0.*@dev",
+    "league/factory-muffin-faker": "1.0.*@dev"
   },
   "autoload": {
     "psr-4": {
