--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,7 @@
   "minimum-stability": "dev",
   "require": {
     "php": ">=5.5.0"
-  },
-  "require-dev": {
-    "league/factory-muffin": "3.0.*@dev",
-    "league/factory-muffin-faker": "1.0.*@dev"
+    "league/factory-muffin": "3.0.*@dev"
   },
   "autoload": {
     "psr-4": {
