--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.5.0"
+    "php": ">=5.5.0",
     "league/factory-muffin": "3.0.*@dev"
   },
   "autoload": {
