Revert "Update composer.json"

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
       "email": "mahmoudsaada@gmail.com"
     }
   ],
+  "minimum-stability": "dev",
   "require": {
     "php": ">=5.5.0",
-    "league/factory-muffin": "~3.0@dev"
+    "league/factory-muffin": "dev-master"
   },
   "autoload": {
     "psr-4": {
